--- a/documentation.html
+++ b/documentation.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Data-MultiVector - Documentation</title>
-</head>
-<body>
-    <h1>Data-MultiVector Documentation</h1>
-    <div>{{ documentation_text | safe }}</div>
-</body>
-</html>
+<h1>Data-MultiVector Documentation</h1>
+<div>
+    <p>Data-MultiVector Installation Instructions (Docker)</p>
+    <p>Deploy Data-MultiVector using Docker to create connections between input and output paths for data processing.</p>
+
+    <ol>
+        <li>Clone the Repository
+            <ul>
+                <li>Open a terminal on your server and navigate to your desired deployment directory.</li>
+                <li>Run the following command to clone the repository from /home/user/github or wherever you want:</li>
+            </ul>
+        </li>
+        <!-- Continue inserting the rest of the steps -->
+    </ol>
+
+    <p>Provide Feedback and Report Bugs</p>
+    <p>If you encounter issues or bugs, please report them on the GitHub repository: <a href="https://github.com/curtalfrey/Data-MultiVector/issues">https://github.com/curtalfrey/Data-MultiVector/issues</a>. Your feedback helps improve the application.</p>
+</div>
