--- a/documentation.html
+++ b/documentation.html
@@ -1,5 +1,10 @@
-<h1>Data-MultiVector Documentation</h1>
-<div>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Data-MultiVector - Documentation</title>
+</head>
+<body>
+    <h1>Data-MultiVector Documentation</h1>
     <p>Data-MultiVector Installation Instructions (Docker)</p>
     <p>Deploy Data-MultiVector using Docker to create connections between input and output paths for data processing.</p>
 
@@ -10,9 +15,34 @@
                 <li>Run the following command to clone the repository from /home/user/github or wherever you want:</li>
             </ul>
         </li>
-        <!-- Continue inserting the rest of the steps -->
+        <li>Navigate to the Project Directory
+            <ul>
+                <li>Change into the cloned repository directory:</li>
+                <li>Run the following command to build the Docker image:</li>
+            </ul>
+        </li>
+        <li>Configure docker-compose.yml
+            <ul>
+                <li>Open the docker-compose.yml file and update the environment variables under the app service with your desired values.</li>
+                <li>Make sure to adjust the INPUT_PATHS and OUTPUT_PATHS according to the directories you want to link.</li>
+            </ul>
+        </li>
+        <li>Build and Start Docker Containers
+            <ul>
+                <li>Run the following command to build and start the Docker containers defined in the docker-compose.yml file:</li>
+            </ul>
+        </li>
+        <li>Access the Application
+            <ul>
+                <li>Open a web browser and navigate to http://localhost:5000 to access Data-MultiVector.</li>
+                <li>For subdomain access, set up the necessary DNS and server configurations.</li>
+            </ul>
+        </li>
+        <li>Provide Feedback and Report Bugs
+            <ul>
+                <li>If you encounter issues or bugs, please report them on the GitHub repository: <a href="https://github.com/curtalfrey/Data-MultiVector/issues">https://github.com/curtalfrey/Data-MultiVector/issues</a>. Your feedback helps improve the application.</li>
+            </ul>
+        </li>
     </ol>
-
-    <p>Provide Feedback and Report Bugs</p>
-    <p>If you encounter issues or bugs, please report them on the GitHub repository: <a href="https://github.com/curtalfrey/Data-MultiVector/issues">https://github.com/curtalfrey/Data-MultiVector/issues</a>. Your feedback helps improve the application.</p>
-</div>
+</body>
+</html>
