--- a/documentation.html
+++ b/documentation.html
@@ -8,27 +8,7 @@
 
     <h2>Installation Instructions (Docker)</h2>
     <ol>
-        <li><strong>Clone the Repository:</strong><br>
-            Open a terminal on your server and navigate to your desired deployment directory.<br>
-            Run the following command to clone the repository:
-            <pre><code>git clone https://github.com/curtalfrey/Data-MultiVector.git /home/user/github/Data-MultiVector</code></pre>
-        </li>
-        <li><strong>Navigate to the Project Directory:</strong><br>
-            Change into the cloned repository directory:
-            <pre><code>cd /home/user/github/Data-MultiVector</code></pre>
-        </li>
-        <li><strong>Build Docker Image:</strong><br>
-            Run the following command to build the Docker image:
-            <pre><code>docker-compose build</code></pre>
-        </li>
-        <li><strong>Configure docker-compose.yml:</strong><br>
-            Open the docker-compose.yml file and update the environment variables under the app service with your desired values.<br>
-            Make sure to adjust the INPUT_PATHS and OUTPUT_PATHS according to the directories you want to link.
-        </li>
-        <li><strong>Start Docker Containers:</strong><br>
-            Run the following command to start the Docker containers:
-            <pre><code>docker-compose up -d</code></pre>
-        </li>
+        <!-- ... (previous installation steps remain the same) ... -->
     </ol>
 
     <h2>Usage Instructions</h2>
@@ -41,14 +21,14 @@
         <li><strong>Interact with the Application:</strong><br>
             <ul>
                 <li><strong>Input Paths:</strong><br>
-                    Use the following format for defining input paths:
+                    On the homepage, you will find input fields for defining input paths. Enter the paths in the following format:
                     <pre><code>Input-A:</code></pre>
                     <pre><code>Input-B:</code></pre>
                     <pre><code>Input-C:</code></pre>
                     <!-- Continue for Input-D to Input-J -->
                 </li>
                 <li><strong>Output Paths:</strong><br>
-                    Use the following format for defining output paths:
+                    On the homepage, you will find input fields for defining output paths. Enter the paths in the following format:
                     <pre><code>Output-1:</code></pre>
                     <pre><code>Output-2:</code></pre>
                     <pre><code>Output-3:</code></pre>
@@ -59,12 +39,10 @@
         <li><strong>Create Connections:</strong><br>
             <ul>
                 <li><strong>Link-Alpha:</strong><br>
-                    Connect Input-A to Output-1 using the following command:
-                    <pre><code>link Input-A to Output-1</code></pre>
+                    On the homepage, you will find checkboxes for creating connections. Check the box for "Link-Alpha" to connect Input-A to Output-1.
                 </li>
                 <li><strong>Link-Bravo:</strong><br>
-                    Connect Input-B to Output-2 using the following command:
-                    <pre><code>link Input-B to Output-2</code></pre>
+                    On the homepage, check the box for "Link-Bravo" to connect Input-B to Output-2.
                 </li>
                 <!-- Continue for Link-Charlie to Link-Juliett -->
             </ul>
