--- a/developer.html
+++ b/developer.html
@@ -1,5 +1,3 @@
-<!-- developer.html -->
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -15,6 +13,7 @@
         <li>Process and validate user-submitted data (input paths, output paths, connections).</li>
         <li>Implement logic to handle data storage, such as creating symlinks, copying files, etc.</li>
         <li>Ensure data validation and security checks to prevent malicious input.</li>
+        <li>Enhance the connection_data dictionary with additional attributes.</li>
     </ul>
     
     <h2>2. Logging Configuration</h2>
